--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,5 +1,6 @@
 .footer {
   position: relative;
+  z-index: 101;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -47,10 +48,9 @@
 }
 
 .social a {
-  font-family: var(--font-spectral);
+  font-family: var(--font-itc-elan-book);
   font-size: var(--font-size-caption);
   font-weight: 300;
-  letter-spacing: -0.03em;
   line-height: 1.25;
   color: inherit;
   text-decoration: none;
@@ -65,19 +65,17 @@
 }
 
 .legal a {
-  font-family: var(--font-spectral);
+  font-family: var(--font-itc-elan-book);
   font-size: 0.75rem;
   font-weight: 300;
-  letter-spacing: -0.03em;
   line-height: 1.25;
   color: inherit;
   text-decoration: none;
 }
 
 .copyright {
-  font-family: var(--font-spectral);
+  font-family: var(--font-itc-elan-book);
   font-size: 0.75rem;
   font-weight: 300;
-  letter-spacing: -0.03em;
   line-height: 1.25;
 }
